Fix ribbon z-index

--- a/src/app/sidedock.scss
+++ b/src/app/sidedock.scss
@@ -32,7 +32,8 @@
 }
 
 body:not(.is-mobile) {
-  .workspace-drop-overlay {
+  .workspace-drop-overlay,
+  .workspace-ribbon {
     z-index: 11;
   }
 
